--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-data/
+
 
 ### Eclipse ###
 .apt_generated
@@ -28,3 +28,5 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+/data/password.txt
